--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -36,6 +36,7 @@ telegraf_container_image_registry_prefix_upstream: "{{ telegraf_container_image_
 telegraf_container_image_registry_prefix_upstream_default: docker.io/
 telegraf_container_image_force_pull: "{{ telegraf_container_image.endswith(':latest') }}"
 
+# The base container network. It will be auto-created by this role if it doesn't exist already.
 telegraf_container_network: '{{ telegraf_identifier }}'
 
 # A list of additional container networks that the container would be connected to.
