--- a/tasks/validate_config.yml
+++ b/tasks/validate_config.yml
@@ -1,8 +1,19 @@
 # SPDX-FileCopyrightText: 2023 Julian-Samuel Gebühr
+# SPDX-FileCopyrightText: 2023 Slavi Pantaleev
 #
 # SPDX-License-Identifier: AGPL-3.0-or-later
 
 ---
+
+- name: (Deprecation) Catch and report renamed settings
+  ansible.builtin.fail:
+    msg: >-
+      Your configuration contains a variable, which now has a different name.
+      Please change your configuration to rename the variable (`{{ item.old }}` -> `{{ item.new }}`).
+  when: "item.old in vars"
+  with_items:
+    - {'old': 'telegraf_config_path', 'new': '<removed>'}
+    - {'old': 'telegraf_env_path', 'new': '<removed>'}
 
 - name: Fail if required Telegraf settings not defined
   ansible.builtin.fail:
