Update install.yml: `Ensure Telegraf path exists`
Reuse https://github.com/mother-of-all-self-hosting/ansible-role-prometheus/blob/fd4f2cfc198f4881ced28eb3a533fa4715c85c25/tasks/install.yml.

Signed-off-by: Suguru Hirahara <acioustick@noreply.codeberg.org>

--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -8,13 +8,13 @@
 
 - name: Ensure Telegraf path exists
   ansible.builtin.file:
-    path: "{{ item.path }}"
+    path: "{{ item }}"
     state: directory
-    mode: 0700
+    mode: 0750
     owner: "{{ telegraf_uid }}"
     group: "{{ telegraf_gid }}"
   with_items:
-    - {path: "{{ telegraf_base_path }}", when: true}
+    - "{{ telegraf_base_path }}"
 
 - name: Ensure Telegraf support files installed
   ansible.builtin.template:
