--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -20,7 +20,7 @@
   ansible.builtin.template:
     src: "{{ role_path }}/templates/{{ item }}.j2"
     dest: "{{ telegraf_base_path }}/{{ item }}"
-    mode: "0640"
+    mode: 0640
     owner: "{{ telegraf_uid }}"
     group: "{{ telegraf_gid }}"
   with_items:
