--- a/tasks/validate_config.yml
+++ b/tasks/validate_config.yml
@@ -14,6 +14,7 @@
   with_items:
     - {'old': 'telegraf_config_path', 'new': '<removed>'}
     - {'old': 'telegraf_env_path', 'new': '<removed>'}
+    - {'old': 'telegraf_environment_variables_extension', 'new': 'telegraf_environment_variables_additional_variables'}
 
 - name: Fail if required Telegraf settings not defined
   ansible.builtin.fail:
