Update main.yml: add names to tasks for documentation
Reuse https://github.com/mother-of-all-self-hosting/ansible-role-uptime_kuma/blob/0974cf427348e6eaae13411cc2cee123e3414b4a/tasks/main.yml.

Signed-off-by: Suguru Hirahara <acioustick@noreply.codeberg.org>

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,14 +1,18 @@
 # SPDX-FileCopyrightText: 2023 Julian-Samuel Gebühr
+# SPDX-FileCopyrightText: 2023 Slavi Pantaleev
 #
 # SPDX-License-Identifier: AGPL-3.0-or-later
 
 ---
 
-- block:
-    - when: telegraf_enabled | bool
+- name: Perform Telegraf installation tasks
+  block:
+    - name: Validate Telegraf configuration
+      when: telegraf_enabled | bool
       ansible.builtin.include_tasks: "{{ role_path }}/tasks/validate_config.yml"
 
-    - when: telegraf_enabled | bool
+    - name: Install Telegraf
+      when: telegraf_enabled | bool
       ansible.builtin.include_tasks: "{{ role_path }}/tasks/install.yml"
   tags:
     - setup-all
@@ -16,8 +20,10 @@
     - install-all
     - install-telegraf
 
-- block:
-    - when: not telegraf_enabled | bool
+- name: Perform Telegraf uninstallation tasks
+  block:
+    - name: Uninstall Telegraf
+      when: not telegraf_enabled | bool
       ansible.builtin.include_tasks: "{{ role_path }}/tasks/uninstall.yml"
   tags:
     - setup-all
