--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -5,12 +5,11 @@
 # SPDX-License-Identifier: AGPL-3.0-or-later
 
 ---
-
 - name: Ensure Telegraf path exists
   ansible.builtin.file:
     path: "{{ item }}"
     state: directory
-    mode: 0750
+    mode: "0750"
     owner: "{{ telegraf_uid }}"
     group: "{{ telegraf_gid }}"
   with_items:
@@ -20,7 +19,7 @@
   ansible.builtin.template:
     src: "{{ role_path }}/templates/{{ item }}.j2"
     dest: "{{ telegraf_base_path }}/{{ item }}"
-    mode: 0640
+    mode: "0640"
     owner: "{{ telegraf_uid }}"
     group: "{{ telegraf_gid }}"
   with_items:
@@ -48,4 +47,4 @@
   ansible.builtin.template:
     src: "{{ role_path }}/templates/systemd/telegraf.service.j2"
     dest: "{{ devture_systemd_docker_base_systemd_path }}/{{ telegraf_identifier }}.service"
-    mode: 0644
+    mode: "0644"
