--- a/tasks/validate_config.yml
+++ b/tasks/validate_config.yml
@@ -4,7 +4,6 @@
 # SPDX-License-Identifier: AGPL-3.0-or-later
 
 ---
-
 - name: (Deprecation) Catch and report renamed settings
   ansible.builtin.fail:
     msg: >-
@@ -12,9 +11,9 @@
       Please change your configuration to rename the variable (`{{ item.old }}` -> `{{ item.new }}`).
   when: "item.old in vars"
   with_items:
-    - {'old': 'telegraf_config_path', 'new': '<removed>'}
-    - {'old': 'telegraf_env_path', 'new': '<removed>'}
-    - {'old': 'telegraf_environment_variables_extension', 'new': 'telegraf_environment_variables_additional_variables'}
+    - { "old": "telegraf_config_path", "new": "<removed>" }
+    - { "old": "telegraf_env_path", "new": "<removed>" }
+    - { "old": "telegraf_environment_variables_extension", "new": "telegraf_environment_variables_additional_variables" }
 
 - name: Fail if required Telegraf settings not defined
   ansible.builtin.fail:
