--- a/tasks/validate_config.yml
+++ b/tasks/validate_config.yml
@@ -18,7 +18,7 @@
 - name: Fail if required Telegraf settings not defined
   ansible.builtin.fail:
     msg: >-
-      You need to define a required configuration setting (`{{ item }}`) for using this role.
+      You need to define a required configuration setting (`{{ item }}`).
   when: "vars[item] == ''"
   with_items:
     - telegraf_config_link
