--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -45,7 +45,10 @@ telegraf_systemd_required_services_list_auto: []
 telegraf_systemd_required_services_list_custom: []
 
 # List of systemd services that the Telegraf systemd service wants
-telegraf_systemd_wanted_services_list: []
+telegraf_systemd_wanted_services_list: "{{ telegraf_systemd_wanted_services_list_default + telegraf_systemd_wanted_services_list_auto + telegraf_systemd_wanted_services_list_custom }}"
+telegraf_systemd_wanted_services_list_default: []
+telegraf_systemd_wanted_services_list_auto: []
+telegraf_systemd_wanted_services_list_custom: []
 
 # The following must be set to enable Telegraf to be configured via InfluxDB
 # You need to obtain these values in a set-up InfluxDB via Load Data -> Telegraf
