--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -50,6 +50,9 @@ telegraf_systemd_wanted_services_list_default: []
 telegraf_systemd_wanted_services_list_auto: []
 telegraf_systemd_wanted_services_list_custom: []
 
+# Specify the timezone
+telegraf_environment_variables_tz: UTC
+
 # The following must be set to enable Telegraf to be configured via InfluxDB
 # You need to obtain these values in a set-up InfluxDB via Load Data -> Telegraf
 # then adding a Telegraf configuration. Then you should copy these values from the setup instructions.
