--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -38,6 +38,11 @@ telegraf_container_additional_networks: "{{ telegraf_container_additional_networ
 telegraf_container_additional_networks_auto: []
 telegraf_container_additional_networks_custom: []
 
+# A list of extra arguments to pass to the container (`docker create` command)
+telegraf_container_extra_arguments: "{{ telegraf_container_extra_arguments_auto + telegraf_container_extra_arguments_custom }}"
+telegraf_container_extra_arguments_auto: []
+telegraf_container_extra_arguments_custom: []
+
 # List of systemd services that the Telegraf systemd service depends on
 telegraf_systemd_required_services_list: "{{ telegraf_systemd_required_services_list_default + telegraf_systemd_required_services_list_auto + telegraf_systemd_required_services_list_custom }}"
 telegraf_systemd_required_services_list_default: "{{ [devture_systemd_docker_base_docker_service_name] if devture_systemd_docker_base_docker_service_name else [] }}"
