--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -31,6 +31,9 @@ telegraf_container_image_force_pull: "{{ telegraf_container_image.endswith(':lat
 # The base container network. It will be auto-created by this role if it doesn't exist already.
 telegraf_container_network: "{{ telegraf_identifier }}"
 
+# Control if the container network is deleted on uninstalling.
+telegraf_container_network_deletion_enabled: true
+
 # A list of additional container networks that the container would be connected to.
 # The role does not create these networks, so make sure they already exist.
 # Use this to expose this container to a reverse proxy, which runs in a different container network and InfluxDB.
