--- a/tasks/uninstall.yml
+++ b/tasks/uninstall.yml
@@ -25,21 +25,24 @@
         path: "{{ devture_systemd_docker_base_systemd_path }}/{{ telegraf_identifier }}.service"
         state: absent
 
-    - name: Ensure Telegraf container network does not exist via community.docker.docker_network
-      when: devture_systemd_docker_base_container_network_creation_method == 'ansible-module'
-      community.docker.docker_network:
-        name: "{{ telegraf_container_network }}"
-        state: absent
-      register: telegraf_network_deletion_result
+    - name: Ensure Telegraf container network does not exist
+      when: telegraf_container_network_deletion_enabled
+      block:
+        - name: Ensure Telegraf container network does not exist via community.docker.docker_network
+          when: devture_systemd_docker_base_container_network_creation_method == 'ansible-module'
+          community.docker.docker_network:
+            name: "{{ telegraf_container_network }}"
+            state: absent
+          register: telegraf_network_deletion_result
 
-    - name: Ensure Telegraf container network does not exist via ansible.builtin.command
-      when: devture_systemd_docker_base_container_network_creation_method == 'command'
-      ansible.builtin.command:
-        cmd: >-
-          {{ devture_systemd_docker_base_host_command_docker }} network rm
-          {{ telegraf_container_network }}
-      register: telegraf_network_deletion_result
-      changed_when: telegraf_container_network in telegraf_network_deletion_result.stdout
+        - name: Ensure Telegraf container network does not exist via ansible.builtin.command
+          when: devture_systemd_docker_base_container_network_creation_method == 'command'
+          ansible.builtin.command:
+            cmd: >-
+              {{ devture_systemd_docker_base_host_command_docker }} network rm
+              {{ telegraf_container_network }}
+          register: telegraf_network_deletion_result
+          changed_when: telegraf_container_network in telegraf_network_deletion_result.stdout
 
     - name: Ensure Telegraf path does not exist
       ansible.builtin.file:
