Add conditional restart support
Reuse https://github.com/mother-of-all-self-hosting/ansible-role-livekit-server/commit/9a9e0f309fc725b14b664a84eb961456c0d33601

Signed-off-by: Suguru Hirahara <did:key:z6MkvVZk1A3KBApWJXv2Ju4H14ErDfRGxh8zxdXSZ4vACDg5>

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -109,3 +109,13 @@ telegraf_debug: false
 #   INFLUXD_BOLT_PATH=/root/telegraf.bolt
 #   DOCKER_telegraf_INIT_RETENTION=90d
 telegraf_environment_variables_additional_variables: ""
+
+# telegraf_restart_necessary controls whether the Telegraf systemd
+# service will be restarted (when true) or merely started (when false) by the
+# systemd service manager role (when conditional restart is enabled).
+#
+# This value is automatically computed during installation based on whether
+# any configuration files, the systemd service file, or the container image changed.
+# The default of `false` means "no restart needed" — appropriate when the role's
+# installation tasks haven't run (e.g., due to --tags skipping them).
+telegraf_restart_necessary: false
