--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -24,6 +24,7 @@
     group: "{{ telegraf_gid }}"
   with_items:
     - env
+  register: telegraf_support_files_result
 
 - name: Ensure Telegraf container image is pulled via community.docker.docker_image
   when: devture_systemd_docker_base_container_image_pull_method == 'ansible-module'
@@ -32,20 +33,20 @@
     source: "{{ 'pull' if ansible_version.major > 2 or ansible_version.minor > 7 else omit }}"
     force_source: "{{ telegraf_container_image_force_pull if ansible_version.major > 2 or ansible_version.minor >= 8 else omit }}"
     force: "{{ omit if ansible_version.major > 2 or ansible_version.minor >= 8 else telegraf_container_image_force_pull }}"
-  register: result
+  register: telegraf_container_image_pull_result
   retries: "{{ devture_playbook_help_container_retries_count }}"
   delay: "{{ devture_playbook_help_container_retries_delay }}"
-  until: result is not failed
+  until: telegraf_container_image_pull_result is not failed
 
 - name: Ensure Telegraf container image is pulled via ansible.builtin.command
   when: devture_systemd_docker_base_container_image_pull_method == 'command'
   ansible.builtin.command:
     cmd: "{{ devture_systemd_docker_base_host_command_docker }} pull {{ telegraf_container_image }}"
-  register: result
+  register: telegraf_container_image_pull_result
   retries: "{{ devture_playbook_help_container_retries_count }}"
   delay: "{{ devture_playbook_help_container_retries_delay }}"
-  until: result is not failed
-  changed_when: "'Downloaded newer image' in result.stdout"
+  until: telegraf_container_image_pull_result is not failed
+  changed_when: "'Downloaded newer image' in telegraf_container_image_pull_result.stdout"
 
 - name: Ensure Telegraf container network is created via community.docker.docker_network
   when: devture_systemd_docker_base_container_network_creation_method == 'ansible-module'
@@ -73,3 +74,13 @@
     src: "{{ role_path }}/templates/systemd/telegraf.service.j2"
     dest: "{{ devture_systemd_docker_base_systemd_path }}/{{ telegraf_identifier }}.service"
     mode: "0644"
+  register: telegraf_systemd_service_result
+
+- name: Determine whether Telegraf needs a restart
+  ansible.builtin.set_fact:
+    telegraf_restart_necessary: >-
+      {{
+        telegraf_support_files_result.changed | default(false)
+        or telegraf_systemd_service_result.changed | default(false)
+        or telegraf_container_image_pull_result.changed | default(false)
+      }}
